Automatically backed up by Learn

--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
  grid-template: auto / 1fr 1fr 1fr;
  grid-gap: 5px
 }
-
+.grid-area: <grid-row-start> / <grid-column-start> / <grid-row-end> / <grid-column-end>
 .grid-item {
   background-color: grey;
   border: 1px solid black;
